fixed user setting wrapping issue in nav bar

--- a/src/styling/index.css
+++ b/src/styling/index.css
@@ -513,7 +513,7 @@ body {
   transform: scaleX(1);
 }
 .navbar-width {
-  max-width: 300px;
+  max-width: 350px;
 }
 
 .desktopComicPageContainer {
